--- a/css/style.css
+++ b/css/style.css
@@ -141,7 +141,6 @@ body {
 #sidebar li li {
     margin: 0;
     padding-left: 10px;
-    /*background : url(../immagini/img09.jpg) no-repeat left 4px;*/
 }
 #sidebar p {
     margin: 0;
@@ -171,14 +170,14 @@ body {
 /****-----#Content----****/
 #content {
     width: 718px;
-    height: 100%;
+    /*height: 100%;*/
     margin-left: 205px;
     padding-top: 100px;
     padding-left: 40px;
     overflow:auto;
     text-align: center;
 }
-.entry input[type="button"]{
+.post input[type="button"]{
     font-size: 14px;
     padding: 8px 30px;
     border: none;
