--- a/css/style.css
+++ b/css/style.css
@@ -174,8 +174,6 @@ body {
 }*/
 /****-----#Content----****/
 #content {
-    /*width: 718px;*/
-    /*height: 100%;*/
     margin-left: 205px;
     padding-top: 100px;
     overflow:auto;
@@ -191,6 +189,38 @@ body {
     box-shadow: 0px 3px 7px #000;
     color: #fff;
     cursor: pointer;
+}
+h {
+    
+}
+div.post {
+ 
+}
+div.cell {
+    text-align: right;
+    float:left;
+    width:243px;
+    border: none;
+    padding: 3px 0 ;
+    margin: 0px 5px;
+}
+div.out {
+    text-align: center;
+    float:left;
+    width:130px;
+    border: none;
+    padding: 3px 0 ;
+    margin: 0px 5px;
+}
+div.row {
+    clear:both;        
+}
+div.button {
+    width: 492px;
+    text-align: center;
+}
+select {
+    width: 100%;
 }
 
     /*-- responsive media queries --*/
