Impostazione della finestra di dialogo per la cancellazione degli elementi. Funzioni per la cancellazione Clienti, Articoli, Fornitori.

--- a/css/style.css
+++ b/css/style.css
@@ -251,5 +251,8 @@ button:active {
 	position: relative;
 	top: 1px;
 }
+body { 
+    font-size: 62.5%;
+}
 
     /*-- responsive media queries --*/
