--- a/css/style.css
+++ b/css/style.css
@@ -254,5 +254,7 @@ button:active {
 body { 
     font-size: 62.5%;
 }
-
+ input.text { margin-bottom:12px; width:95%; padding: .4em; }
+    
+    fieldset { padding:0; border:0; margin-top:25px; }
     /*-- responsive media queries --*/
