--- a/css/style.css
+++ b/css/style.css
@@ -208,7 +208,7 @@ div.outText {
     text-align: center;
     border: 1px solid #eee;
     float:left;
-    width:130px;
+    width: 12%;
     height: 35px;   
     padding-top: 15px;   
 }
@@ -252,6 +252,8 @@ button:active {
 	top: 1px;
 }
  input.text { margin-bottom:12px; width:95%; padding: .4em; }
+
+#text {margin-bottom:12px; width:95%; padding: .4em;}
     
-    fieldset { padding:0; border:0; margin-top:25px; }
+fieldset { padding:0; border:0; margin-top:25px; }
     /*-- responsive media queries --*/
