--- a/css/style.css
+++ b/css/style.css
@@ -155,7 +155,7 @@ body {
 #sidebar h2 {
     height: 26px;
     margin: 0 0 10px 10px;
-    padding: 8px 0 2px 10px;
+    padding: 8px 1px 2px 10px;
     background: url(../immagini/img06.png) no-repeat left top;
     text-transform: capitalize;
     font-size: 11px;
@@ -190,8 +190,9 @@ body {
     color: #fff;
     cursor: pointer;
 }
-h {
-    
+#post form {
+    width: 60%;
+    margin: auto;
 }
 div.post {
  margin: 0 auto;
