--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 /****-----Login Page----****/
 body.index {
     background: #dddddd;
+    font-size: 100%;
 }
 .header {
     padding: 65px 0;
@@ -19,9 +20,9 @@ body.index {
     box-shadow: 0px 3px 7px #000;
 }
 .mail-form input[type="text"], .mail-form input[type="password"] { 
-    padding: 13px 10px;
+    padding: 3% 2%;
     width: 94%;
-    font-size: 16px;
+    font-size: 100%;
     outline: none;
     margin: 13px 0;
     border:none;
@@ -29,8 +30,9 @@ body.index {
     font-family: 'Andika-R', sans-serif;
 }
 .mail-form input[type="submit"] {
-    font-size: 20px;
-    padding: 8px 30px;
+    min-width: 35%;
+    font-size: 100%;
+    padding: 3% 6%;
     border: none;
     outline: none;
     border-radius: 4px;
@@ -42,15 +44,17 @@ body.index {
     font-family: 'Andika-R', sans-serif;
 }
 #error {
-    font-size: 16px;
+    font-size: 1em;
     color: #fff;
     font-family: 'Andika-R', sans-serif;
 }
 /****-----Home Page----****/
 body {
+    min-width: 1300px;
     margin: 0;
     padding: 0;
     font-family: Arial, Helvetica, sans-serif;
+    font-size: 100%;
 }
 /****-----Menu Orizzontale----****/
 .headerHome {
@@ -62,6 +66,7 @@ body {
 #menu {
     float: left;
     width: 60%;
+    min-width: 40%;
     height: 60px;
 }
 #menu a {
@@ -115,6 +120,7 @@ body {
 /****-----#Page----****/
 #page {
     width: 100%;
+    min-width: 1300px;
     height: 100%;
     margin: 0;
     display: inline-block;
@@ -168,10 +174,6 @@ body {
     padding-top: 8px;
     text-decoration: none;
 }
-/*#sidebar a:hover {
-    background: #4CAF50;
-    color: #FFFFFF;
-}*/
 /****-----#Content----****/
 #content {
     margin-left: 205px;
@@ -191,7 +193,7 @@ body {
     cursor: pointer;
 }
 #post form {
-    width: 60%;
+    max-width: 540px;
     margin: auto;
 }
 div.post {
@@ -209,9 +211,10 @@ div.outText {
     text-align: center;
     border: 1px solid #eee;
     float:left;
-    width: 12%;
+    width: 135px;
     height: 35px;   
-    padding-top: 15px;   
+    padding-top: 15px;
+    font-size: 14px;
 }
 .outText h{
     font-weight: bold;
@@ -223,8 +226,7 @@ div.out {
     width:130px;
     height: 35px;
     padding-top: 7px;
-    padding-bottom: 7px;
-    
+    padding-bottom: 7px;    
 }
 div.row {
     clear:both;        
